--- a/aulas/background-image/fundo006.html
+++ b/aulas/background-image/fundo006.html
@@ -3,15 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+             
+           /*background-color: black;
             background-image: url("imagens/wallpaper002.jpg");
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            background:black url("imagens/wallpaper002.jpg") center center/cover no-repeat  fixed
+
+            /*
+            shorthand background
+            color > image > position > obs: colocar barra assim como o codigo acima size > repeat > attachment
+            */
+
         }
 
         /*
@@ -21,7 +31,7 @@
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -36,6 +46,11 @@
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure et assumenda harum doloribus eum, voluptatum fugiat voluptatibus unde. Iusto cum accusantium consectetur! Voluptates, assumenda saepe officia ex esse voluptas dolorem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa iste, totam, reiciendis voluptatibus architecto enim qui illum quos, sit explicabo expedita et ducimus officia ut nobis in corrupti exercitationem id?
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas iure harum dolorum hic repellendus odit laborum sunt, molestias porro autem totam fugit vel quis voluptatibus qui molestiae reiciendis sed aliquid?
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem voluptas asperiores distinctio cum dolor consectetur, dolore officia eum recusandae quos modi sint! Suscipit recusandae, quo beatae facere dolores ab natus.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam, expedita. Dolorem ipsam explicabo libero blanditiis! Minima aliquam rerum amet autem cupiditate praesentium quos. Quam eos tenetur quis officia. Alias, sint.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum ea numquam quis dolorum odit, possimus optio ex? Quas ullam voluptatem tempore natus reiciendis, soluta, consectetur, vero voluptatum excepturi eligendi at.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem eaque eum quibusdam molestiae, iste totam mollitia optio ratione possimus laboriosam et adipisci sapiente. Inventore eaque placeat, qui quod iure porro!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti obcaecati quas quod tempore provident nisi culpa ipsum qui tenetur. Ullam ut optio sapiente iste impedit ad veniam, reprehenderit saepe ipsum.
         </p>
     </main>
 </body>
