--- a/aulas/background-image/fundo007.html
+++ b/aulas/background-image/fundo007.html
@@ -13,7 +13,7 @@
             padding: 10px;
             position: relative;
             background-image: url("imagens/target001.png");
-            background-size: 100% 100%;
+            background-size: ;
         }
 
         #conteudo{
